fix: separate z-index layers for info dialogs and tooltips

--- a/web/css/css-variables.css
+++ b/web/css/css-variables.css
@@ -60,7 +60,8 @@
     --mr-z-floating-button: 10000;
     --mr-z-notification: 100000;
     --mr-z-context-menu: 100001;
-    --mr-z-tooltip: 100002;
+    --mr-z-info-dialog: 100002;
+    --mr-z-tooltip: 100003;
     --mr-spacing-1: 1px;
     --mr-spacing-2: 2px;
     --mr-spacing-3: 3px;
